# installer

./: .env.example  .gitignore  CLAUDE-MISTAKES.md  Cargo.toml  README.md  REDESIGN.md  REQUIREMENTS.md  build.sh  installer-requirements.md  package.json  test.sh
data/: .gitignore  TRAINING_PLAN.md  test_cases.jsonl
data/conversations/: batch_04.jsonl  templates.jsonl
data/training/: TRAINING_PLAN.md  training_with_thinking.jsonl
python/: .gitignore  augment_data.py  evaluate_lora.py  generate_targeted_data.py  llm_server.py  sweep_hyperparams.py  test_model.py  train_lora.py
python/conversations/: batch_01.jsonl  batch_02.jsonl  batch_03.jsonl
python/training/: generate_gap_examples.py
src/: index.tsx  llm.rs  main.rs  types.rs
src/app/: commands.rs  llm_query.rs  mod.rs
src/components/: DocsPanel.tsx  Header.tsx  Shell.tsx
src/screens/: DocsViewer.tsx
xtask/: Cargo.toml
xtask/src/: main.rs  vm.rs
