[package]
name = "levitate-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
tui-markdown = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
rand = "0.9"
dotenvy = "0.15"

[[bin]]
name = "augment-data"
path = "src/bin/augment_data.rs"
